# ady-spring2026

./: README.md  main.ipynb  pyproject.toml  requirement-copilot.md
example/: Australia_Rain_Prediction.ipynb
