[project]
name = "ady-2026"
version = "0.1.0"
description = "Vietnam Housing Price Analysis - Data analysis and visualization project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]
